Updates from ShareLaTeX

--- a/basics.tex
+++ b/basics.tex
@@ -1580,8 +1580,10 @@ Complete this proof yourself, using the dual proof for the closure as guidance.
 \begin{exr}\label{exr3.4.53}
 Let $\mathcal{S}\subseteq 2^{\R}$ be a collection of subsets of $\R$.  Show that the following are true.
 \begin{enumerate}
-\item $\bigcup _{S\in \mathcal{S}}\Cls (S)\subseteq \Cls \left( \bigcup _{S\in \mathcal{S}}S\right)$.
-\item $\bigcap _{S\in \mathcal{S}}\Int (S)\supseteq \Int \left( \bigcup _{S\in \mathcal{S}}S\right)$.
+\item \label{enm3.4.53.i}$\bigcap _{S\in \mathcal{S}}\Cls (S)\supseteq \Cls \left( \bigcap _{S\in \mathcal{S}}S\right)$.
+\item \label{enm3.4.53.ii}$\bigcup _{S\in \mathcal{S}}\Int (S)\subseteq \Int \left( \bigcup _{S\in \mathcal{S}}S\right) $.
+\item \label{enm3.4.53.iii}$\bigcup _{S\in \mathcal{S}}\Cls (S)\subseteq \Cls \left( \bigcup _{S\in \mathcal{S}}S\right)$.
+\item \label{enm3.4.53.iv}$\bigcap _{S\in \mathcal{S}}\Int (S)\supseteq \Int \left( \bigcup _{S\in \mathcal{S}}S\right)$.
 \end{enumerate}
 Find examples to show that we need not have equality in general.
 \end{exr}
