--- a/main.tex
+++ b/main.tex
@@ -125,6 +125,13 @@
 \item Switch to XeLaTeX
 
 \item Add diagrams
+
+\item Change Dirichlet
+
+\item Integration to Picard's theorem to exponential (tangent to power rule) to sine and cosine to Weierstrass's function to topology on $\Mor _{\Man}(\R ^d,
+R )$ to Taylor's Theorem to Clairut's Theorem.
+
+\item Inverse Function Theorem
 \end{itemize}
 
 
