--- a/structure.tex
+++ b/structure.tex
@@ -66,6 +66,8 @@
 %	FONTS
 %----------------------------------------------------------------------------------------
 
+\let\oldepsilon\epsilon % Replace \varpesilon but not \epsilon
+
 \usepackage{avant} % Use the Avantgarde font for headings
 %\usepackage{times} % Use the Times font for headings
 
