--- a/topology.tex
+++ b/topology.tex
@@ -1969,7 +1969,7 @@ And similarly for the third family:
 \item Closed set being perfectly-separated is perfectly-$T_4$ (\cref{PerfectlyT4}).
 \end{enumerate}
 
-We now illustrate how all these axioms are related to each other.
+We now illustrate how all these axioms are related to each other.  All implications are strict (unless otherwise indicated by a $\Leftrightarrow$), in which case the offending counter-example is given in the indicated footnote.  Perhaps the only real surprise\footnote{That's not to say that the counter-examples are easy---they're not (in fact, some of them are \emph{really fucking hard}, like, among-the-most-difficult-things-in-the-notes hard)---but rather that you probably expect that some counter-example exists, even if incredibly exotic.} is the equivalence of $T_{4\frac{1}{2}}$ and completely-$T_4$:  \nameref{UrysohnsLemma} (\cref{UrysohnsLemma}).\footnote{Though perhaps it's worth nothing that $T_{k\frac{1}{2}}$ is equivalent to completely-$T_k$ for $k=3,4$ but \emph{not} $k=2$.}
 \begin{footnoteequation}
 \begin{equation}\label{4.6.105}
 \begin{tikzcd}
