--- a/math_commands.tex
+++ b/math_commands.tex
@@ -25,6 +25,7 @@
 \DeclareMathOperator{\colim}{colim}
 \DeclareMathOperator{\csch}{csch}
 \newcommand{\Curl}{\vec{\nabla}\times}
+\DeclareMathOperator{\D}{D}
 \newcommand{\Div}{\vec{\nabla}\cdot}
 \DeclareMathOperator{\diag}{diag}
 \DeclareMathOperator{\diam}{diam}
@@ -76,7 +77,7 @@
 \DeclareMathOperator{\T}{T}
 \DeclareMathOperator{\Tp}{Tp}
 \DeclareMathOperator{\TZero}{T0}
-\NewDocumentCommand{\tangent}{o o}{\T _{#2}(#1)}    % For tangent space
+\NewDocumentCommand{\tangent}{m m}{\T _{#2}(#1)}    % For tangent space
 \DeclareMathOperator{\tp}{tp}
 \DeclareMathOperator{\Tr}{Tr}
 \DeclareMathOperator{\tr}{tr}
@@ -96,6 +97,25 @@
 \DeclareMathSymbol{\coprod} {1}{mathx}{"B2}
 \makeatother % The preceding lines are to use the symbols \prod and \coprod from mathabx package (mathptmx disallows \coprod by default for some reason, also use \prod from mathabx for consistency)
 
+\makeatletter
+\def\re@DeclareMathSymbol#1#2#3#4{%
+    \let#1=\undefined
+    \DeclareMathSymbol{#1}{#2}{#3}{#4}}
+% no OMX used 
+\expandafter\ifx\csname npxmath@scaled\endcsname\relax
+  \let\npxmath@@scaled\@empty%
+\else
+  \edef\npxmath@@scaled{s*[\csname npxmath@scaled\endcsname]}%
+\fi
+\DeclareFontEncoding{LMX}{}{}
+\DeclareFontSubstitution{LMX}{npxexx}{m}{n}
+\DeclareFontFamily{LMX}{npxexx}{}
+\DeclareFontShape{LMX}{npxexx}{m}{n}{<-> \npxmath@@scaled zplexx}{}
+\DeclareSymbolFont{lettersA}{U}{npxmia}{m}{it}
+\re@DeclareMathSymbol{\epsilonup}{\mathord}{lettersA}{15}
+\makeatother
+\renewcommand{\epsilon}{\epsilonup} % The preceding lines are to used the symbol \epsilonup from the newpx package.  We then use this for \epsilon as the other fonts use the ssame symbol for \epsilon and \varepsilon
+
 % Relations
 \DeclareFontFamily{U}{mathb}{\hyphenchar\font45}
 \DeclareFontShape{U}{mathb}{m}{n}{
@@ -103,9 +123,11 @@
       <10.95> mathb10 <12> <14.4> <17.28> <20.74> <24.88> mathb12
       }{}
 \DeclareSymbolFont{mathb}{U}{mathb}{m}{n}
-\DeclareMathSymbol{\llcurly}     {3}{mathb}{"CE} % The preceding lines are to use just the symbol \llcurly from mathabx package (which itself conflicts with amsmath)
+\DeclareMathSymbol{\llcurly}     {3}{mathb}{"CE}
+\DeclareMathSymbol{\ggcurly}     {3}{mathb}{"CF} % The preceding lines are to use just the symbols \llcurly and \ggcurly from mathabx package (which itself conflicts with amsmath)
 
 \newcommand*{\llcurlyeq}{\mathrel{\vbox{\offinterlineskip\hbox{\scalebox{.9}{$\llcurly$}}\vskip-.6ex\hbox{$-$}\vskip-.75ex}}}
+\newcommand*{\ggcurlyeq}{\mathrel{\vbox{\offinterlineskip\hbox{\scalebox{.9}{$\ggcurly$}}\vskip-.6ex\hbox{$-$}\vskip-.75ex}}}
 
 \newcommand{\st}{\ensuremath{\text{ s.t.~}}}
 
@@ -131,6 +153,7 @@
 \newcommand{\Crng}{\mathsf{Crng}}
 \newcommand{\Grp}{\mathsf{Grp}}
 \newcommand{\Mag}{\mathsf{Mag}}
+\newcommand{\Man}{\mathsf{Man}}
 \newcommand{\Met}{\mathsf{Met}}
 \newcommand{\Pre}{\mathsf{Pre}}
 \newcommand{\Rg}{\mathsf{Rg}}
